@@ -1,37 +1,43 @@
-//  Displays and then fades a notice after a period of time.
-AlertBox = Class.create() ;
-AlertBox.prototype = {
-  initialize: function(elementId,timeout) {
-    this.elementId = elementId ;
-    this.timeout = (timeout==undefined) ? 2 : timeout ;
-  },
 
-  show: function(text) {
-    alert('Setting to: ' + text);
-    $(this.elementId).innerHTML = text;
-    setTimeout('showNotice', 200);
-    setTimeout('fadeNotice', 2000);
-//    new Effect.Appear(this.elementId, {duration: 0.3});
-//    if (this.timeout != 0) setTimeout(this.fade.bind(this), this.timeout * 1000);
-  },
-  
-  doIt: function() {
-    new Effect.Appear(this.elementId, {duration: 0.3});
-    if (this.timeout != 0) setTimeout(this.fade.bind(this), this.timeout * 1000);
-  },
-  
-  fade: function() {
-    new Effect.Fade(this.elementId, {duration: 0.3});
-  }  
-} ;
-
-var Notice = new AlertBox('notice') ;
-
-function showNotice() {
-  alert("showing it...");
-  new Effect.Appear('notice', {duration: 0.3});
+function showFileList(id) {
+  html = $('file_list').innerHTML;
+  if (html != '') {
+    toggleOn('file_list');
+    hideFileListLink();
+    return false;
+  }
+  url = '/torrent/file_list/' + id;
+  new Ajax.Updater('file_list', url, {asynchronous:true, evalScripts:true, onComplete: hideFileListLink});
+  return false;
 }
 
-function fadeNotice() {
-  new Effect.Fade('notice', {duration: 0.3});
+function hideFileListLink() {
+  toggleOff('show_files_link');
+  toggleOn('hide_files_link');
+}
+
+function toggleFileListOff() {
+  toggleOff('file_list');
+  toggleOn('show_files_link');
+  toggleOff('hide_files_link');
+}
+
+function toggleDiv(divid) {
+  if(document.getElementById(divid).style.display == 'none'){
+    document.getElementById(divid).style.display = 'block';
+    Element.show(divid);
+  }else{
+    document.getElementById(divid).style.display = 'none';
+    Element.hide(divid);
+  }
+}
+
+function toggleOn(divid) {
+  if(document.getElementById(divid).style.display == 'none'){
+    document.getElementById(divid).style.display = 'block';
+  }
+}
+
+function toggleOff(divid) {
+  $(divid).style.display = 'none';
 }
