@@ -1,0 +1,10 @@
+require File.dirname(__FILE__) + '/../test_helper'
+
+class CommentTest < Test::Unit::TestCase
+  fixtures :comments
+
+  # Replace this with your real tests.
+  def test_truth
+    assert true
+  end
+end
